--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
+  google_fonts: ^6.3.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
