--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,19 +31,27 @@ dependencies:
   http: ^1.2.2
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   shared_preferences: ^2.5.3
   intl: ^0.20.2
   flutter_dotenv: ^5.1.0
+  flutter_svg: ^2.0.7
+  dotted_border: ^2.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   google_fonts: ^6.3.2
   shimmer: ^3.0.0
+  flutter_native_splash: ^2.4.7
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  image_picker: ^1.1.1
+  permission_handler: ^11.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,6 +74,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/
+    - assets/IconApp/
+    - assets/PayKlaim/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -94,3 +105,27 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
+# ==========================================
+# SPLASH SCREEN CONFIGURATION (ROOT LEVEL)
+# ==========================================
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/IconApp/ico.png
+  android_gravity: center
+  ios_content_mode: scaleAspectFit
+  android: true
+  ios: true
+  branding: assets/IconApp/ico.png
+  branding_mode: bottom
+
+# ==========================================
+# APP ICON CONFIGURATION (ROOT LEVEL)
+# ==========================================
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/IconApp/ico.png"
