Update Payment and Claim v3

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,7 +113,7 @@ flutter:
 
 flutter_native_splash:
   color: "#FFFFFF"
-  image: assets/IconApp/ico.png
+  image: assets/IconApp/LearraFull.png
   android_gravity: center
   ios_content_mode: scaleAspectFit
   android: true
