--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_svg: ^2.0.7
   dotted_border: ^2.1.0
+  url_launcher: ^6.2.5
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
